2000-05-15  Steve Langasek <vorlon@dodds.net>

	* common/Makefile.am, client/Makefile.am, server/Makefile.am:
	Changed library name from libgnocatan_gui.a to libgnocatan_gtk.a,
	allowing for the possibility of multiple front-ends

2000-05-13  Bibek Sahu <scorpio@dodds.net>

	* common/driver.[ch], client/gnocatan.c, server/gnocatan-server.c:
	Moved the global driver definition to driver.c, and added a function
	set_ui_driver( UIDriver* ).  Moved logging into the driver
	structure.  Note that the gtk driver starts by logging to the
	console and must be told to move that to a window later on.

2000-05-12  Steve Langasek <vorlon@dodds.net>

	* common/common_gtk.c, common/state.c: Pulled all GTK-specific code
	out of state.c, moving it to common_gtk.c.

	* client/gnocatan.c, server/gnocatan-server.c: Changed main() loops
	to initialize an appropriate UIDriver.

	* common/state.h: Exported [inc,dec]_use_count() so that they're
	available to the interface drivers.

	* common/driver.h, common/game.h, common/state.h: Fixed some
	header files so that they automatically include headers on which
	they depend, instead of expecting the c file to take care of it all.

	* common/driver.h, common_gtk.h: Began creating the structure for
	independent interface drivers (GTK, console).

2000-05-12  Bibek Sahu <scorpio@dodds.net>

	* common/common_gui.[ch], common/common_gtk.[ch]: Renamed
	common/common_gui.[ch] -> common/common_gtk.[ch] per Steve's
	request.  More appropriate, considering its function.

2000-05-12  Steve Langasek <vorlon@dodds.net>

	* common/state.[ch], server/buildutil.c, server/develop.c,
	server/discard.c, server/meta.c, server/player.c, server/pregame.c,
	server/resource.c, server/robber.c, server/server.c, server/trade.c,
	server/turn.c:  Made the 'widget' within the StateMachine an opaque
	pointer, so that code that depends on the StateMachine is not bound
	to any one GUI.

	* configure.in, meta-server/gnocatan-meta-server.c: